# visualMarker_example

./: CMakeLists.txt  main_ros.cpp  main_test.cpp  package.xml
includes/: DistortionClassifier.cpp  DistortionClassifier.h  MarkerDetection.cpp  MarkerDetection.h  PoseEvaluator.cpp  PoseEvaluator.h  imageProcessor.cpp  imageProcessor.h
src/: main_ros.cpp  main_test.cpp  png_to_msg.cpp
test_imgs/: aruco_poses_info.csv
