<?xml version="1.0"?>
<package format="2">
    <name>visualMarkerDetection</name>
    <version>0.0.0</version>
    <description>The visualMarkerDetection package</description>

    <maintainer email="user@todo.todo">user</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>opencv2</depend>
</package>